Disable LayerTreeHostContextTestLostContextSucceeds on Linux

Bug: 736392
Change-Id: I14aca399a0c6b44386f808bd36f2b00d9243bfd9
TBR=danakj@chromium.org
NOTRY=true